# carrier_api

./: .gitignore  .ruff.toml  AGENTS.md  CONTRIBUTING.md  README.md  RELEASE.md  data.json  live_smoke_test.env.example  package.json  pyproject.toml  requirements.txt  schema.graphql  setup.py
.github/workflows/: dependabotautomerge.yaml  lint.yaml  lint.yml  mypy.yaml  prek_autoupdate.yml  pytest.yaml  pytest_coverage.yml  release.yml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_8220f7ef689c4942___init___py.html  z_8220f7ef689c4942_api_connection_graphql_py.html  z_8220f7ef689c4942_api_websocket_data_updater_py.html  z_8220f7ef689c4942_api_websocket_py.html  z_8220f7ef689c4942_config_py.html  z_8220f7ef689c4942_const_py.html  z_8220f7ef689c4942_energy_py.html  z_8220f7ef689c4942_errors_py.html  z_8220f7ef689c4942_live_smoke_test_py.html  z_8220f7ef689c4942_profile_py.html  z_8220f7ef689c4942_status_py.html  z_8220f7ef689c4942_stub_py.html  z_8220f7ef689c4942_system_py.html  z_8220f7ef689c4942_util_py.html
scripts/: live_smoke_test
src/carrier_api/: __init__.py  api_connection.py  api_connection_graphql.py  api_websocket.py  api_websocket_data_updater.py  config.py  const.py  energy.py  errors.py  live_smoke_test.py  profile.py  status.py  stub.py  system.py  util.py
src/carrier_api/client/: __init__.py  api_connection_graphql.py  api_websocket.py  api_websocket_data_updater.py
src/carrier_api/schema/: __init__.py  boolean.py  config.py  energy.py  profile.py  simple_example.py  status.py  system.py  systems.py
tests/: __init__.py  conftest.py  test_api_connection_graphql.py  test_api_websocket.py  test_config.py  test_fixture_contracts.py  test_live_smoke_test.py  test_models.py  test_schema.py  test_websocket_data_updater.py  test_workflows.py
tests/graphql/: energy.json  systems.json
tests/messages/: README.txt  config_zone_hold.json  config_zone_program.json  heartbeat_with_no_device_id.json  status_idu_cfm.json  status_odu_opmode.json  status_zone_activity.json  status_zone_activity_only.json  status_zone_conditioning.json  status_zone_hold.json  status_zone_htsp.json  status_zone_rh.json
