[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "carrier_api"
version = "2.8.10"
authors = [
  { name="Bren Dahl", email="dahl.brendan@gmail.com" },
]
description = "Carrier Api Wrapper"
readme = "README.md"
requires-python = ">=3.10, <4"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS :: MacOS X",
]
keywords = [
    "carrier",
    "api"
]
dependencies = [
    "gql[aiohttp]",
    "aiohttp",
    "deepmerge",
    "python-dateutil",
    "mashumaro",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[project.urls]
"Homepage" = "https://github.com/dahlb/carrier_api"
"Bug Tracker" = "https://github.com/dahlb/carrier_api/issues"