[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "carrier_api"
version = "2.11.3"
authors = [
    { name = "Bren Dahl", email = "dahl.brendan@gmail.com" },
]
description = "Carrier Api Wrapper"
readme = "README.md"
requires-python = ">=3.14, <4"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "carrier",
    "api",
]
dependencies = [
    "aiohttp",
    "deepmerge",
    "gql[aiohttp]>=3",
    "python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/dahlb/carrier_api"
"Bug Tracker" = "https://github.com/dahlb/carrier_api/issues"

[dependency-groups]
lint = [
    "mypy",
    "prek",
    "ruff",
]
pytest = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-timeout",
    "types-python-dateutil",
]
dev = [
    { include-group = "lint" },
    { include-group = "pytest" },
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
carrier_api = ["py.typed"]

[tool.mypy]
python_version = "3.14"
files = ["src/carrier_api", "tests"]
mypy_path = "src"
check_untyped_defs = true
explicit_package_bases = true
pretty = true
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "deepmerge.*",
    "gql.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
indent-width = 4
fix = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "B007",    # Loop control variable {name} not used within loop body.
    "B014",    # Exception handler with duplicate exception.
    "C",       # complexity.
    "E",       # pycodestyle.
    "F",       # pyflakes/autoflake.
    "ICN001",  # Import conventions; {name} should be imported as {asname}.
    "PGH004",  # Use specific rule codes when using noqa.
    "PLC0414", # Useless import alias. Import alias does not rename original package.
    "RUF006",  # Store a reference to the return value of asyncio.create_task.
    "SIM105",  # Use contextlib.suppress({exception}) instead of try-except-pass.
    "SIM117",  # Merge with-statements that use the same scope.
    "SIM118",  # Use {key} in {dict} instead of {key} in {dict}.keys().
    "SIM201",  # Use {left} != {right} instead of not {left} == {right}.
    "SIM212",  # Use {a} if {a} else {b} instead of {b} if not {a} else {a}.
    "SIM300",  # Yoda conditions.
    "SIM401",  # Use get from dict with default instead of an if block.
    "T20",     # flake8-print.
    "TRY004",  # Prefer TypeError exception for invalid type.
    "UP",      # pyupgrade.
    "W",       # pycodestyle.
]
ignore = [
    "D",    # docstrings.
    "E501", # line too long.
    "E731", # do not assign a lambda expression, use a def.
    "F401", # unused import.
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/carrier_api/stub.py" = [
    "E402", # Interactive script mutates sys.path before importing the local package.
    "T201", # Interactive script intentionally prints inspected state.
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["carrier_api"]
split-on-trailing-comma = false

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
ignore-words-list = "hass"

[tool.pytest.ini_options]
addopts = """
  --quiet
  --timeout=20
  --durations=10
  -o console_output_style=progress
  --cov=carrier_api
  --cov-report=term-missing
  --cov-report=html
"""
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["carrier_api"]
relative_files = true
parallel = false

[tool.coverage.report]
show_missing = true
